added model source parameter; fixes #56

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -222,7 +222,6 @@
    },
    "outputs": [],
    "source": [
-    "backend = 'pt' # backend 'pt' for PyTorch or 'tf' for Tensorflow \n",
     "pretrained = True # use pretrained model weights\n",
     "model_path = None # if pretrained = False (i.e., randomly initialized weights) set path to model weights\n",
     "batch_size = 32 # use a power of two (this can be any size, depending on the number of images for which you aim to extract features)\n",
@@ -253,12 +252,15 @@
    "source": [
     "## load model\n",
     "model_name = 'vgg16_bn' \n",
+    "# specify the model source as VGG16 can be used from torchvision, timm, ... In this case torchvision is used (https://pytorch.org/vision/stable/models.html)\n",
+    "source = 'torchvision' \n",
+    "\n",
     "model = Model(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
     "            device=device,\n",
-    "            backend=backend,\n",
+    "            source=source\n",
     ")"
    ]
   },
@@ -376,8 +378,7 @@
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
-    "            device=device,\n",
-    "            backend=backend,\n",
+    "            device=device\n",
     ")"
    ]
   },
@@ -491,8 +492,7 @@
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
-    "            device=device,\n",
-    "            backend=backend,\n",
+    "            device=device\n",
     ")"
    ]
   },
