--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -229,7 +229,6 @@
    },
    "outputs": [],
    "source": [
-    "backend = 'tf' # backend 'pt' for PyTorch or 'tf' for Tensorflow \n",
     "pretrained = True # use pretrained model weights\n",
     "model_path = None # if pretrained = False (i.e., randomly initialized weights) set path to model weights\n",
     "batch_size = 32 # use a power of two (this can be any size, depending on the number of images for which you aim to extract features)\n",
@@ -262,12 +261,15 @@
    "source": [
     "## load model\n",
     "model_name = 'VGG16' \n",
+    "# specify the model source, in this case use Keras applications (https://keras.io/api/applications/)\n",
+    "source = 'keras' \n",
+    "\n",
     "model = Model(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
     "            device=device,\n",
-    "            backend=backend,\n",
+    "            source=source\n",
     ")"
    ]
   },
