added source to Google colabs

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -245,6 +245,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that it is crucial to set a model's `source`. VGG16 implementations exist in different libraries and therefore (pretrained) weights can be downloaded from different sources. One such source is `torchvision` from which we will download VGG16."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -252,8 +259,9 @@
    "source": [
     "## load model\n",
     "model_name = 'vgg16_bn' \n",
-    "# specify the model source as VGG16 can be used from torchvision, timm, ... In this case torchvision is used (https://pytorch.org/vision/stable/models.html)\n",
-    "source = 'torchvision' \n",
+    "# specify model source \n",
+    "# we use torchvision here (https://pytorch.org/vision/stable/models.html)\n",
+    "source = 'torchvision'\n",
     "\n",
     "model = Model(\n",
     "            model_name,\n",
@@ -374,11 +382,15 @@
    "source": [
     "## load model\n",
     "model_name = 'VGG16bn_ecoset'\n",
+    "# specifiy model source\n",
+    "# the model's source here is custom\n",
+    "source = 'custom'\n",
     "model = Model(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
-    "            device=device\n",
+    "            device=device,\n",
+    "            source=source,\n",
     ")"
    ]
   },
@@ -488,11 +500,14 @@
    "source": [
     "# load model\n",
     "model_name = 'clip-ViT'\n",
+    "# specifiy model source\n",
+    "# the model's source here is custom\n",
     "model = Model(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
-    "            device=device\n",
+    "            device=device,\n",
+    "            source=source,\n",
     ")"
    ]
   },
