--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -252,6 +252,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that it is crucial to set a model's `source`. VGG16 implementations exist in different libraries and therefore (pretrained) weights can be downloaded from different sources. One such source is `keras` from which we will download VGG16."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -261,7 +268,8 @@
    "source": [
     "## load model\n",
     "model_name = 'VGG16' \n",
-    "# specify the model source, in this case use Keras applications (https://keras.io/api/applications/)\n",
+    "# specify model source \n",
+    "# we use keras (backend is TensorFlow) here ((https://keras.io/api/applications/)\n",
     "source = 'keras' \n",
     "\n",
     "model = Model(\n",
