updated README.md to include source

--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -269,7 +269,7 @@
     "## load model\n",
     "model_name = 'VGG16' \n",
     "# specify model source \n",
-    "# we use keras (backend is TensorFlow) here ((https://keras.io/api/applications/)\n",
+    "# we use keras (backend is TensorFlow) here (https://keras.io/api/applications/)\n",
     "source = 'keras' \n",
     "\n",
     "model = Model(\n",
