major thingsvision update; code base has become more modular

--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -52,14 +52,15 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "import torch\n",
     "import tensorflow\n",
-    "import os\n",
     "import re\n",
-    "import thingsvision.vision as vision\n",
     "import numpy as np\n",
+    "from thingsvision import Extractor\n",
+    "from thingsvision.utils.storing import save_features\n",
+    "from thingsvision.utils.data import ImageDataset, DataLoader\n",
     "\n",
-    "from thingsvision.model_class import Model\n",
     "from google.colab import drive\n",
     "from typing import Any, Dict, List"
    ]
@@ -147,30 +148,32 @@
    "outputs": [],
    "source": [
     "def extract_features(\n",
-    "                    model: Any,\n",
+    "                    extractor: Any,\n",
     "                    module_name: str,\n",
     "                    image_path: str,\n",
     "                    out_path: str,\n",
     "                    batch_size: int,\n",
     "                    flatten_activations: bool,\n",
     "                    apply_center_crop: bool,\n",
+    "                    class_names: List[str]=None,\n",
+    "                    file_names: List[str]=None,\n",
     "                    clip: bool=False,\n",
     ") -> np.ndarray:\n",
-    "    \"\"\"Extract features for a single layer.\"\"\"\n",
-    "    dl = vision.load_dl(\n",
-    "                        root=image_path,\n",
-    "                        out_path=out_path,\n",
-    "                        batch_size=batch_size,\n",
-    "                        transforms=model.get_transformations(apply_center_crop=apply_center_crop),\n",
-    "                        backend=backend,\n",
+    "    \"\"\"Extract features for a single layer.\"\"\"                                    \n",
+    "    dataset = ImageDataset(\n",
+    "        root=image_path,\n",
+    "        out_path=out_path,\n",
+    "        backend=extractor.backend,\n",
+    "        transforms=extractor.get_transformations(apply_center_crop=apply_center_crop),\n",
+    "        class_names=class_names,\n",
+    "        file_names=file_names,\n",
     "    )\n",
-    "    # exctract features\n",
-    "    features, _ = model.extract_features(\n",
-    "                                        data_loader=dl,\n",
-    "                                        module_name=module_name,\n",
-    "                                        flatten_acts=flatten_activations,\n",
-    "                                        clip=clip,\n",
-    "                                        return_probabilities=False,\n",
+    "    batches = DataLoader(dataset=dataset, batch_size=batch_size, backend=extractor.backend)\n",
+    "    features = extractor.extract_features(\n",
+    "                    batches=batches,\n",
+    "                    module_name=module_name,\n",
+    "                    flatten_acts=flatten_activations,\n",
+    "                    clip=clip,\n",
     "    )\n",
     "    return features\n",
     "\n",
@@ -182,35 +185,39 @@
     "\n",
     "def extract_all_layers(\n",
     "                        model_name: str,\n",
-    "                        model: Any,\n",
+    "                        extractor: Any,\n",
     "                        image_path: str,\n",
     "                        out_path: str,\n",
     "                        batch_size: int,\n",
     "                        flatten_activations: bool,\n",
     "                        apply_center_crop: bool,\n",
     "                        layer: str='conv',\n",
+    "                        class_names: List[str]=None,\n",
+    "                        file_names: List[str]=None,\n",
     "                        clip: bool=False,\n",
     ") -> Dict[str, np.ndarray]:\n",
     "    \"\"\"Extract features for all selected layers and save them to disk.\"\"\"\n",
     "    features_per_layer = {}\n",
-    "    module_names = get_module_names(model.model.layers)\n",
+    "    module_names = get_module_names(extractor.model.layers)\n",
     "    for l, module_name in enumerate(module_names, start=1):\n",
     "        if re.search(f'{layer}', module_name):\n",
     "            # extract features for layer \"module_name\"\n",
     "            features = extract_features(\n",
-    "                                        model=model,\n",
+    "                                        extractor=extractor,\n",
     "                                        module_name=module_name,\n",
     "                                        image_path=image_path,\n",
     "                                        out_path=out_path,\n",
     "                                        batch_size=batch_size,\n",
     "                                        flatten_activations=flatten_activations,\n",
     "                                        apply_center_crop=apply_center_crop,\n",
+    "                                        class_names=class_names,\n",
+    "                                        file_names=file_names,\n",
     "                                        clip=clip,\n",
     "            )\n",
     "            # replace with e.g., [f'conv_{l:02d}'] or [f'fc_{l:02d}']\n",
-    "            features_per_layer[f'layer_{l:02d}'] = features\n",
+    "            features_per_layer[f'{layer}_{l:02d}'] = features\n",
     "            # save features to disk\n",
-    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy')\n",
+    "            save_features(features, out_path=f'{out_path}/features_{model_name}_{module_name}', file_format='npy')\n",
     "    return features_per_layer"
    ]
   },
@@ -234,7 +241,9 @@
     "batch_size = 32 # use a power of two (this can be any size, depending on the number of images for which you aim to extract features)\n",
     "apply_center_crop = True # center crop images (set to False, if you don't want to center-crop images)\n",
     "flatten_activations = True # whether or not features (e.g., of Conv layers) should be flattened\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "class_names = None  # optional list of class names for class dataset\n",
+    "file_names = None # optional list of file names according to which features should be sorted"
    ]
   },
   {
@@ -272,7 +281,7 @@
     "# we use keras (backend is TensorFlow) here (https://keras.io/api/applications/)\n",
     "source = 'keras' \n",
     "\n",
-    "model = Model(\n",
+    "extractor = Extractor(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
@@ -309,18 +318,20 @@
    "source": [
     "# extract features for a single layer (e.g., penultimate)\n",
     "features = extract_features(\n",
-    "                            model=model,\n",
+    "                            extractor=extractor,\n",
     "                            module_name=module_name,\n",
     "                            image_path=full_image_path,\n",
     "                            out_path=full_output_path,\n",
     "                            batch_size=batch_size,\n",
     "                            flatten_activations=flatten_activations,\n",
     "                            apply_center_crop=apply_center_crop,\n",
+    "                            class_names=class_names,\n",
+    "                            file_names=file_names,\n",
     "                            clip=False,\n",
     ")\n",
     "\n",
     "# save features to disk\n",
-    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
+    "save_features(features, out_path=f'{full_output_path}/features_{model_name}_{module_name}', file_format='npy')"
    ]
   },
   {
@@ -339,14 +350,16 @@
     "# extract features for all convolutional layers (i.e., block#_conv#) and save them to disk\n",
     "layer = 'conv'\n",
     "features_conv_layers = extract_all_layers(\n",
+    "                                            extractor=extractor,\n",
     "                                            model_name=model_name,\n",
-    "                                            model=model,\n",
     "                                            image_path=full_image_path,\n",
     "                                            out_path=full_output_path,\n",
     "                                            batch_size=batch_size,\n",
     "                                            flatten_activations=flatten_activations,\n",
     "                                            apply_center_crop=apply_center_crop,\n",
     "                                            layer=layer,\n",
+    "                                            class_names=class_names,\n",
+    "                                            file_names=file_names,\n",
     "                                            clip=False,\n",
     ")"
    ]
@@ -360,14 +373,16 @@
     "# extract features for all fully-connected layers (i.e., fc#) and save them to disk\n",
     "layer = 'fc'\n",
     "features_fc_layers = extract_all_layers(\n",
+    "                                        extractor=extractor,\n",
     "                                        model_name=model_name,\n",
-    "                                        model=model,\n",
     "                                        image_path=full_image_path,\n",
     "                                        out_path=full_output_path,\n",
     "                                        batch_size=batch_size,\n",
     "                                        flatten_activations=flatten_activations,\n",
     "                                        apply_center_crop=apply_center_crop,\n",
     "                                        layer=layer,\n",
+    "                                        class_names=class_names,\n",
+    "                                        file_names=file_names,\n",
     "                                        clip=False,\n",
     ")"
    ]
@@ -385,8 +400,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from thingsvision.core.rsa import compute_rdm, plot_rdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# compute representational dissimilarity matrix\n",
-    "rdm = vision.compute_rdm(features, method='correlation')"
+    "rdm = compute_rdm(features, method='correlation')"
    ]
   },
   {
@@ -396,14 +420,45 @@
    "outputs": [],
    "source": [
     "# plot rdm\n",
-    "vision.plot_rdm(\n",
-    "                full_output_path,\n",
-    "                features,\n",
-    "                method='correlation',\n",
-    "                format='.png', # '.jpg'\n",
-    "                colormap='cividis',\n",
-    "                show_plot=True,\n",
+    "plot_rdm(\n",
+    "            full_output_path,\n",
+    "            features,\n",
+    "            method='correlation',\n",
+    "            format='.png', # '.jpg'\n",
+    "            colormap='cividis',\n",
+    "            show_plot=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Centered Kernel Alignment (CKA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thingsvision.core.cka import CKA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_i = features_fc_layers[f'fc_01']\n",
+    "features_j = features_fc_layers[f'fc_02']\n",
+    "\n",
+    "assert features_i.shape[0] == features_j.shape[0]\n",
+    "m = features_i.shape[0]\n",
+    "cka = CKA(m=m, kernel='linear')\n",
+    "rho = cka.compare(X=features_i, Y=features_j)"
    ]
   }
  ],
