--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -52,15 +52,17 @@
    },
    "outputs": [],
    "source": [
-    "import torch\n",
     "import os\n",
+    "import torch\n",
     "import torch.nn as nn\n",
-    "import thingsvision.vision as vision\n",
     "import numpy as np\n",
+    "from thingsvision import Extractor\n",
+    "from thingsvision.utils.storing import save_features\n",
+    "from thingsvision.utils.data import ImageDataset, DataLoader\n",
+    "from thingsvision.core.extraction import center_features\n",
     "\n",
-    "from thingsvision.model_class import Model\n",
     "from google.colab import drive\n",
-    "from typing import Any, Dict"
+    "from typing import Any, Dict, List"
    ]
   },
   {
@@ -146,64 +148,70 @@
    "outputs": [],
    "source": [
     "def extract_features(\n",
-    "                    model: Any,\n",
+    "                    extractor: Any,\n",
     "                    module_name: str,\n",
     "                    image_path: str,\n",
     "                    out_path: str,\n",
     "                    batch_size: int,\n",
     "                    flatten_activations: bool,\n",
     "                    apply_center_crop: bool,\n",
+    "                    class_names: List[str]=None,\n",
+    "                    file_names: List[str]=None,\n",
     "                    clip: bool=False,\n",
     ") -> np.ndarray:\n",
-    "    \"\"\"Extract features for a single layer.\"\"\"\n",
-    "    dl = vision.load_dl(\n",
-    "                        root=image_path,\n",
-    "                        out_path=out_path,\n",
-    "                        batch_size=batch_size,\n",
-    "                        transforms=model.get_transformations(apply_center_crop=apply_center_crop),\n",
-    "                        backend=backend,\n",
+    "    \"\"\"Extract features for a single layer.\"\"\"                                    \n",
+    "    dataset = ImageDataset(\n",
+    "        root=image_path,\n",
+    "        out_path=out_path,\n",
+    "        backend=extractor.backend,\n",
+    "        transforms=extractor.get_transformations(apply_center_crop=apply_center_crop),\n",
+    "        class_names=class_names,\n",
+    "        file_names=file_names,\n",
     "    )\n",
-    "    # exctract features\n",
-    "    features, _ = model.extract_features(\n",
-    "                                        data_loader=dl,\n",
-    "                                        module_name=module_name,\n",
-    "                                        flatten_acts=flatten_activations,\n",
-    "                                        clip=clip,\n",
-    "                                        return_probabilities=False,\n",
+    "    batches = DataLoader(dataset=dataset, batch_size=batch_size, backend=extractor.backend)\n",
+    "    features = extractor.extract_features(\n",
+    "                    batches=batches,\n",
+    "                    module_name=module_name,\n",
+    "                    flatten_acts=flatten_activations,\n",
+    "                    clip=clip,\n",
     "    )\n",
     "    return features\n",
     "\n",
     "\n",
     "def extract_all_layers(\n",
     "                        model_name: str,\n",
-    "                        model: Any,\n",
+    "                        extractor: Any,\n",
     "                        image_path: str,\n",
     "                        out_path: str,\n",
     "                        batch_size: int,\n",
     "                        flatten_activations: bool,\n",
     "                        apply_center_crop: bool,\n",
     "                        layer: Any=nn.Linear,\n",
+    "                        class_names: List[str]=None,\n",
+    "                        file_names: List[str]=None,\n",
     "                        clip: bool=False,\n",
     ") -> Dict[str, np.ndarray]:\n",
     "    \"\"\"Extract features for all selected layers and save them to disk.\"\"\"\n",
     "    features_per_layer = {}\n",
-    "    for l, (module_name, module) in enumerate(model.model.named_modules(), start=1):\n",
+    "    for l, (module_name, module) in enumerate(extractor.model.named_modules(), start=1):\n",
     "        if isinstance(module, layer):\n",
     "            # extract features for layer \"module_name\"\n",
     "            features = extract_features(\n",
-    "                                        model=model,\n",
+    "                                        extractor=extractor,\n",
     "                                        module_name=module_name,\n",
     "                                        image_path=image_path,\n",
     "                                        out_path=out_path,\n",
     "                                        batch_size=batch_size,\n",
     "                                        flatten_activations=flatten_activations,\n",
     "                                        apply_center_crop=apply_center_crop,\n",
+    "                                        class_names=class_names,\n",
+    "                                        file_names=file_names,\n",
     "                                        clip=clip,\n",
     "            )\n",
     "            # replace with e.g., [f'conv_{l:02d}'] or [f'fc_{l:02d}']\n",
     "            features_per_layer[f'layer_{l:02d}'] = features\n",
     "            # save features to disk\n",
-    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy')\n",
+    "            save_features(features, out_path=f'{out_path}/features_{model_name}_{module_name}', file_format='npy')\n",
     "    return features_per_layer"
    ]
   },
@@ -227,6 +235,8 @@
     "batch_size = 32 # use a power of two (this can be any size, depending on the number of images for which you aim to extract features)\n",
     "apply_center_crop = True # center crop images (set to False, if you don't want to center-crop images)\n",
     "flatten_activations = True # whether or not features (e.g., of Conv layers) should be flattened\n",
+    "class_names = None  # optional list of class names for class dataset\n",
+    "file_names = None # optional list of file names according to which features should be sorted\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
@@ -257,13 +267,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## load model\n",
+    "# load model\n",
     "model_name = 'vgg16_bn' \n",
     "# specify model source \n",
     "# we use torchvision here (https://pytorch.org/vision/stable/models.html)\n",
     "source = 'torchvision'\n",
-    "\n",
-    "model = Model(\n",
+    "# initialize the extractor\n",
+    "extractor = Extractor( \n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
@@ -302,18 +312,20 @@
    "source": [
     "# extract features for a single layer (e.g., penultimate)\n",
     "features = extract_features(\n",
-    "                            model=model,\n",
+    "                            extractor=extractor,\n",
     "                            module_name=module_name,\n",
     "                            image_path=full_image_path,\n",
     "                            out_path=full_output_path,\n",
     "                            batch_size=batch_size,\n",
     "                            flatten_activations=flatten_activations,\n",
     "                            apply_center_crop=apply_center_crop,\n",
+    "                            class_names=class_names,\n",
+    "                            file_names=file_names,\n",
     "                            clip=False,\n",
     ")\n",
     "\n",
     "# save features to disk\n",
-    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
+    "save_features(features, out_path=f'{full_output_path}/features_{model_name}_{module_name}', file_format='npy')"
    ]
   },
   {
@@ -333,13 +345,15 @@
     "layer = nn.Conv2d\n",
     "features_conv_layers = extract_all_layers(\n",
     "                                            model_name=model_name,\n",
-    "                                            model=model,\n",
+    "                                            extractor=extractor,\n",
     "                                            image_path=full_image_path,\n",
     "                                            out_path=full_output_path,\n",
     "                                            batch_size=batch_size,\n",
     "                                            flatten_activations=flatten_activations,\n",
     "                                            apply_center_crop=apply_center_crop,\n",
     "                                            layer=layer,\n",
+    "                                            class_names=class_names,\n",
+    "                                            file_names=file_names,\n",
     "                                            clip=False,\n",
     ")"
    ]
@@ -354,13 +368,15 @@
     "layer = nn.Linear\n",
     "features_fc_layers = extract_all_layers(\n",
     "                                        model_name=model_name,\n",
-    "                                        model=model,\n",
+    "                                        extractor=extractor,\n",
     "                                        image_path=full_image_path,\n",
     "                                        out_path=full_output_path,\n",
     "                                        batch_size=batch_size,\n",
     "                                        flatten_activations=flatten_activations,\n",
     "                                        apply_center_crop=apply_center_crop,\n",
     "                                        layer=layer,\n",
+    "                                        class_names=class_names,\n",
+    "                                        file_names=file_names,\n",
     "                                        clip=False,\n",
     ")"
    ]
@@ -385,7 +401,7 @@
     "# specifiy model source\n",
     "# the model's source here is custom\n",
     "source = 'custom'\n",
-    "model = Model(\n",
+    "extractor = Extractor(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
@@ -421,19 +437,21 @@
    "outputs": [],
    "source": [
     "# extract features for a single layer (e.g., penultimate)\n",
-    "features = extract_features(\n",
-    "                            model=model,\n",
+    "vgg_ecoset_features = extract_features(\n",
+    "                            extractor=extractor,\n",
     "                            module_name=module_name,\n",
     "                            image_path=full_image_path,\n",
     "                            out_path=full_output_path,\n",
     "                            batch_size=batch_size,\n",
     "                            flatten_activations=flatten_activations,\n",
     "                            apply_center_crop=apply_center_crop,\n",
+    "                            class_names=class_names,\n",
+    "                            file_names=file_names,\n",
     "                            clip=False,\n",
     ")\n",
     "\n",
     "# save features to disk\n",
-    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
+    "save_features(vgg_ecoset_features, out_path=f'{full_output_path}/features_{model_name}_{module_name}', file_format='npy')"
    ]
   },
   {
@@ -453,13 +471,15 @@
     "layer = nn.Conv2d\n",
     "features_conv_layers = extract_all_layers(\n",
     "                                            model_name=model_name,\n",
-    "                                            model=model,\n",
+    "                                            extractor=extractor,\n",
     "                                            image_path=full_image_path,\n",
     "                                            out_path=full_output_path,\n",
     "                                            batch_size=batch_size,\n",
     "                                            flatten_activations=flatten_activations,\n",
     "                                            apply_center_crop=apply_center_crop,\n",
     "                                            layer=layer,\n",
+    "                                            class_names=class_names,\n",
+    "                                            file_names=file_names,\n",
     "                                            clip=False,\n",
     ")"
    ]
@@ -474,13 +494,15 @@
     "layer = nn.Linear\n",
     "features_fc_layers = extract_all_layers(\n",
     "                                        model_name=model_name,\n",
-    "                                        model=model,\n",
+    "                                        extractor=extractor,\n",
     "                                        image_path=full_image_path,\n",
     "                                        out_path=full_output_path,\n",
     "                                        batch_size=batch_size,\n",
     "                                        flatten_activations=flatten_activations,\n",
     "                                        apply_center_crop=apply_center_crop,\n",
     "                                        layer=layer,\n",
+    "                                        class_names=class_names,\n",
+    "                                        file_names=file_names,\n",
     "                                        clip=False,\n",
     ")"
    ]
@@ -502,7 +524,8 @@
     "model_name = 'clip-ViT'\n",
     "# specifiy model source\n",
     "# the model's source here is custom\n",
-    "model = Model(\n",
+    "source = 'custom'\n",
+    "extractor = Extractor( \n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
@@ -538,22 +561,24 @@
    "outputs": [],
    "source": [
     "# extract features\n",
-    "features = extract_features(\n",
-    "                            model=model,\n",
+    "clip_features = extract_features(\n",
+    "                            extractor=extractor,\n",
     "                            module_name=module_name,\n",
     "                            image_path=full_image_path,\n",
     "                            out_path=full_output_path,\n",
     "                            batch_size=batch_size,\n",
     "                            flatten_activations=flatten_activations,\n",
     "                            apply_center_crop=apply_center_crop,\n",
+    "                            class_names=class_names,\n",
+    "                            file_names=file_names,\n",
     "                            clip=True,\n",
     ")\n",
     "\n",
     "# apply centering (not necessary, but may be desirable, depending on the analysis)\n",
-    "features = vision.center_features(features)\n",
+    "clip_features = center_features(clip_features)\n",
     "\n",
     "# save features to disk\n",
-    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
+    "save_features(clip_features, out_path=f'{full_output_path}/features_{model_name}_{module_name}', file_format='npy')"
    ]
   },
   {
@@ -569,8 +594,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute representational dissimilarity matrix\n",
-    "rdm = vision.compute_rdm(features, method='correlation')"
+    "from thingsvision.core.rsa import compute_rdm, plot_rdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute representational dissimilarity matrix (RDM) for CLIP features\n",
+    "rdm = compute_rdm(clip_features, method='correlation')"
    ]
   },
   {
@@ -580,14 +614,42 @@
    "outputs": [],
    "source": [
     "# plot rdm\n",
-    "vision.plot_rdm(\n",
-    "                full_output_path,\n",
-    "                features,\n",
-    "                method='correlation',\n",
-    "                format='.png', # '.jpg'\n",
-    "                colormap='cividis',\n",
-    "                show_plot=True,\n",
+    "plot_rdm(\n",
+    "        full_output_path,\n",
+    "        clip_features,\n",
+    "        method='correlation',\n",
+    "        format='.png', # '.jpg'\n",
+    "        colormap='cividis',\n",
+    "        show_plot=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Centered Kernel Alignment (CKA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from thingsvision.core.cka import CKA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert vgg_ecoset_features.shape[0] == clip_features.shape[0]\n",
+    "m = clip_features.shape[0]\n",
+    "cka = CKA(m=m, kernel='linear')\n",
+    "rho = cka.compare(X=vgg_ecoset_features, Y=clip_features)"
    ]
   }
  ],
