removed pretrained and replaced with weights for all custom models since pretrained is deprecated

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -324,6 +324,9 @@
     "                            clip=False,\n",
     ")\n",
     "\n",
+    "# apply centering (not necessary, but may be desirable, depending on the analysis)\n",
+    "features = center_features(features)\n",
+    "\n",
     "# save features to disk\n",
     "save_features(features, out_path=f'{full_output_path}/features_{model_name}_{module_name}', file_format='npy')"
    ]
@@ -449,6 +452,9 @@
     "                            file_names=file_names,\n",
     "                            clip=False,\n",
     ")\n",
+    "\n",
+    "# apply centering (not necessary, but may be desirable, depending on the analysis)\n",
+    "vgg_ecoset_features = center_features(vgg_ecoset_features)\n",
     "\n",
     "# save features to disk\n",
     "save_features(vgg_ecoset_features, out_path=f'{full_output_path}/features_{model_name}_{module_name}', file_format='npy')"
