updated pytorch colab; fixes #81

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -388,7 +388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 2: VGG-16 with batch norm (pretrained on Ecoset)"
+    "### Example 2: VGG-16 (pretrained on Ecoset)"
    ]
   },
   {
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "## load model\n",
-    "model_name = 'VGG16bn_ecoset'\n",
+    "model_name = 'VGG16_ecoset'\n",
     "# specifiy model source\n",
     "# the model's source here is custom\n",
     "source = 'custom'\n",
@@ -527,7 +527,8 @@
    "outputs": [],
    "source": [
     "# load model\n",
-    "model_name = 'clip-ViT'\n",
+    "model_name = 'clip'\n",
+    "variant = 'ViT-B/32'\n",
     "# specifiy model source\n",
     "# the model's source here is custom\n",
     "source = 'custom'\n",
@@ -537,6 +538,7 @@
     "            model_path=model_path,\n",
     "            device=device,\n",
     "            source=source,\n",
+    "            model_parameters={'variant': variant}\n",
     ")"
    ]
   },
