renamed doc to notebooks

--- a/notebooks/tensorflow.ipynb
+++ b/notebooks/tensorflow.ipynb
@@ -57,7 +57,7 @@
     "import tensorflow\n",
     "import re\n",
     "import numpy as np\n",
-    "from thingsvision import Extractor\n",
+    "from thingsvision import get_extractor\n",
     "from thingsvision.utils.storing import save_features\n",
     "from thingsvision.utils.data import ImageDataset, DataLoader\n",
     "\n",
@@ -281,8 +281,8 @@
     "# we use keras (backend is TensorFlow) here (https://keras.io/api/applications/)\n",
     "source = 'keras' \n",
     "\n",
-    "extractor = Extractor(\n",
-    "            model_name,\n",
+    "extractor = get_extractor(\n",
+    "            model_name=model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
     "            device=device,\n",
