--- a/notebooks/pytorch.ipynb
+++ b/notebooks/pytorch.ipynb
@@ -56,7 +56,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import numpy as np\n",
-    "from thingsvision import Extractor\n",
+    "from thingsvision import get_extractor\n",
     "from thingsvision.utils.storing import save_features\n",
     "from thingsvision.utils.data import ImageDataset, DataLoader\n",
     "from thingsvision.core.extraction import center_features\n",
@@ -273,8 +273,8 @@
     "# we use torchvision here (https://pytorch.org/vision/stable/models.html)\n",
     "source = 'torchvision'\n",
     "# initialize the extractor\n",
-    "extractor = Extractor( \n",
-    "            model_name,\n",
+    "extractor = get_extractor( \n",
+    "            model_name=model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
     "            device=device,\n",
@@ -404,8 +404,8 @@
     "# specifiy model source\n",
     "# the model's source here is custom\n",
     "source = 'custom'\n",
-    "extractor = Extractor(\n",
-    "            model_name,\n",
+    "extractor = get_extractor(\n",
+    "            model_name=model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
     "            device=device,\n",
@@ -532,8 +532,8 @@
     "# specifiy model source\n",
     "# the model's source here is custom\n",
     "source = 'custom'\n",
-    "extractor = Extractor( \n",
-    "            model_name,\n",
+    "extractor = get_extractor( \n",
+    "            model_name=model_name,\n",
     "            pretrained=pretrained,\n",
     "            model_path=model_path,\n",
     "            device=device,\n",
