aligned notebook code with most recent thingsvision version

--- a/notebooks/tensorflow.ipynb
+++ b/notebooks/tensorflow.ipynb
@@ -157,23 +157,21 @@
     "                    apply_center_crop: bool,\n",
     "                    class_names: List[str]=None,\n",
     "                    file_names: List[str]=None,\n",
-    "                    clip: bool=False,\n",
     ") -> np.ndarray:\n",
     "    \"\"\"Extract features for a single layer.\"\"\"                                    \n",
     "    dataset = ImageDataset(\n",
     "        root=image_path,\n",
     "        out_path=out_path,\n",
-    "        backend=extractor.backend,\n",
+    "        backend=extractor.get_backend(),\n",
     "        transforms=extractor.get_transformations(apply_center_crop=apply_center_crop),\n",
     "        class_names=class_names,\n",
     "        file_names=file_names,\n",
     "    )\n",
-    "    batches = DataLoader(dataset=dataset, batch_size=batch_size, backend=extractor.backend)\n",
+    "    batches = DataLoader(dataset=dataset, batch_size=batch_size, backend=extractor.get_backend())\n",
     "    features = extractor.extract_features(\n",
     "                    batches=batches,\n",
     "                    module_name=module_name,\n",
     "                    flatten_acts=flatten_activations,\n",
-    "                    clip=clip,\n",
     "    )\n",
     "    return features\n",
     "\n",
@@ -194,7 +192,6 @@
     "                        layer: str='conv',\n",
     "                        class_names: List[str]=None,\n",
     "                        file_names: List[str]=None,\n",
-    "                        clip: bool=False,\n",
     ") -> Dict[str, np.ndarray]:\n",
     "    \"\"\"Extract features for all selected layers and save them to disk.\"\"\"\n",
     "    features_per_layer = {}\n",
@@ -212,7 +209,6 @@
     "                                        apply_center_crop=apply_center_crop,\n",
     "                                        class_names=class_names,\n",
     "                                        file_names=file_names,\n",
-    "                                        clip=clip,\n",
     "            )\n",
     "            # replace with e.g., [f'conv_{l:02d}'] or [f'fc_{l:02d}']\n",
     "            features_per_layer[f'{layer}_{l:02d}'] = features\n",
@@ -327,7 +323,6 @@
     "                            apply_center_crop=apply_center_crop,\n",
     "                            class_names=class_names,\n",
     "                            file_names=file_names,\n",
-    "                            clip=False,\n",
     ")\n",
     "\n",
     "# save features to disk\n",
@@ -360,7 +355,6 @@
     "                                            layer=layer,\n",
     "                                            class_names=class_names,\n",
     "                                            file_names=file_names,\n",
-    "                                            clip=False,\n",
     ")"
    ]
   },
@@ -383,7 +377,6 @@
     "                                        layer=layer,\n",
     "                                        class_names=class_names,\n",
     "                                        file_names=file_names,\n",
-    "                                        clip=False,\n",
     ")"
    ]
   },
