--- a/notebooks/tensorflow.ipynb
+++ b/notebooks/tensorflow.ipynb
@@ -163,11 +163,15 @@
     "        root=image_path,\n",
     "        out_path=out_path,\n",
     "        backend=extractor.get_backend(),\n",
-    "        transforms=extractor.get_transformations(apply_center_crop=apply_center_crop),\n",
+    "        transforms=extractor.get_transformations(apply_center_crop=apply_center_crop, resize_dim=256, crop_dim=224),\n",
     "        class_names=class_names,\n",
     "        file_names=file_names,\n",
     "    )\n",
-    "    batches = DataLoader(dataset=dataset, batch_size=batch_size, backend=extractor.get_backend())\n",
+    "    batches = DataLoader(\n",
+    "        dataset=dataset,\n",
+    "        batch_size=batch_size, \n",
+    "        backend=extractor.get_backend(),\n",
+    "        )\n",
     "    features = extractor.extract_features(\n",
     "                    batches=batches,\n",
     "                    module_name=module_name,\n",
