--- a/notebooks/pytorch.ipynb
+++ b/notebooks/pytorch.ipynb
@@ -32,7 +32,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install --upgrade thingsvision"
+    "!pip install --upgrade thingsvision\n",
+    "!pip install git+https://github.com/openai/CLIP.git"
    ]
   },
   {
